--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/lucid-slugify": "^1.0.3",
+    "@sentry/node": "^5.14.1",
     "pg": "^7.18.2",
     "url-parse": "^1.4.7"
   },
